It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sat, May 30, 2009
---------------------------------------------------------------------
- Implemented crm.Menu class and added menu related CSS styles.

Fri, May 29, 2009
---------------------------------------------------------------------
- Fixed opportunity assignment issue reported by Deepu (LH #49).
- Fixed similar issue with the contact assignments.
- Fixed account sidebar issue when shipping/billing addresses are missing.

Thu, May 28, 2009
---------------------------------------------------------------------
- Server installation and configuration at Linode.

Wed, May 27, 2009
---------------------------------------------------------------------
- Refactored auto_complete to use before_filter.
- Created shared behavior specs to test auto_complete.
- Display a message when no quick find matches were found.
- Uninstalled [auto_complete] plugin since we're not using it.
- Signed up for Linode.com

Tue, May 26, 2009
---------------------------------------------------------------------
- Happy birthday, Laura!

Mon, May 25, 2009
---------------------------------------------------------------------
- Implemented jumpbox (called "Quick Find").

Sun, May 24, 2009
---------------------------------------------------------------------
- More work on jumpbox.

Sat, May 23, 2009
---------------------------------------------------------------------
- Restructured application's JavaScript and added crm.Popup class.
- Added "Jump to..." link that shows the jumpbox (see LH #45).

Fri, May 22, 2009
---------------------------------------------------------------------
- Happy birthday, Dad!

Thu, May 21, 2009
---------------------------------------------------------------------
- Fixed JavaScript and CSS caching issues in production environment.

Wed, May 20, 2009