@@ -130,15 +130,20 @@
   :position relative
   .close
     :background lightblue
+    :border
+      :top 1px gainsboro solid
+      :left 1px gainsboro solid
+      :bottom 1px grey solid
+      :right 1px grey solid
     :color navy
     :cursor pointer
-    :height 18px
-    :margin 2px
+    :height 16px
+    :margin 3px
     :position absolute
     :right 0px
     :text-align center
     :top 0px
-    :width 18px
+    :width 17px
 
 .buttonbar
   :border-top 1px gray solid
