@@ -1,0 +1,6 @@
+%p
+  = link_to_close options_campaigns_path
+  = hidden_field_tag "campaign[user_id]", @current_user.id
+  Sort campaigns by <a href=#>date created</a>.
+  Show <a href=#>30</a> campaign records per page using <a href=#>long</a> format.
+%p
