@@ -1,9 +1,14 @@
 = styles_for :campaign
 
-= inline :create_campaign, new_campaign_path
+.title_tools
+  = link_to_inline(:create_campaign, new_campaign_path) << " | "
+  = link_to_inline(:options, options_campaigns_path)
+  =# link_to_inline(:options, "/", :text => "&#8984;", :plain => true)
+
 .title
-  %span#create_campaign_title Campaigns
+  %span#title Campaigns
   = image_tag("loading.gif", :size => "16x16", :id => "loading", :style => "display: none;")
+.remote#options{ hidden }
 .remote#create_campaign{ hidden }
 
 .list#campaigns
