@@ -1,4 +1,5 @@
 page.call "crm.flick", :empty, :toggle
+page.call "crm.hide_form", :options, "Campaigns"
 if params[:cancel] != "true"
   page[:create_campaign].replace_html :partial => "create"
   page.call "crm.flip_form", :create_campaign
