@@ -2,8 +2,9 @@
 
 = inline :create_lead, new_lead_path
 .title
-  %span#create_lead_title Leads
+  %span#title Leads
   = image_tag("loading.gif", :size => "16x16", :id => "loading", :style => "display: none;")
+.remote#options{ hidden }
 .remote#create_lead{ hidden }
 
 .list#leads
