@@ -2,8 +2,9 @@
 
 = inline :create_opportunity, new_opportunity_path
 .title
-  %span#create_opportunity_title Opportunities
+  %span#title Opportunities
   = image_tag("loading.gif", :size => "16x16", :id => "loading", :style => "display: none;")
+.remote#options{ hidden }
 .remote#create_opportunity{ hidden }
 
 .list#opportunities
